--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,7 @@
     "allowUnreachableCode": false,
     "declaration": false,
     "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2022"
-    ],
+    "lib": ["dom", "es2022"],
     "moduleResolution": "bundler",
     "module": "esnext",
     "target": "es2022",
@@ -17,18 +14,15 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "h.Fragment",
     "skipLibCheck": true,
-    "types": [
-      "node",
-      "vite/client"
-    ]
+    "types": ["node", "vite/client"]
   },
   "include": [
     ".storybook",
     "src",
-    "stencil.config.ts",
     "types"
   ],
   "exclude": [
+    "stencil.config.ts",
     "**/*.spec.ts",
     "**/*.spec.tsx",
     "**/*.stories.mdx",
