--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "generate": "stencil generate",
     "prestorybook": "npx stencil build",
     "storybook": "storybook dev -p 6006",
+    "dev": "concurrently -n STENCIL,SB -c green,cyan \"cross-env STORYBOOK=true stencil build --dev --watch\" \"storybook dev -p 6006\"",
     "build-storybook": "storybook build",
     "test:watch": "jest --watch"
   },
@@ -85,6 +86,8 @@
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9.24.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
